BugFix: Text overflows add button

--- a/src/listCreator.css
+++ b/src/listCreator.css
@@ -11,7 +11,7 @@
     top: 10px;
     transition: 1s;
     font-weight: 1000;
-    font-size: 1.5rem;
+    font-size: 1rem;
     color: white;
 }
 
